fixes to blog element animation - not finished on mobile!

--- a/app/assets/styles/modules/_blogsection.css
+++ b/app/assets/styles/modules/_blogsection.css
@@ -1,4 +1,5 @@
 .blog {
+    transform: scaleY(0);
   width: 100%;
   display: block;
   margin: 0;
